--- a/GamerMatch/GamerMatch/View/Base.lproj/Main.storyboard
+++ b/GamerMatch/GamerMatch/View/Base.lproj/Main.storyboard
@@ -877,6 +877,55 @@
             </objects>
             <point key="canvasLocation" x="4241" y="1546"/>
         </scene>
+        <!--Display Chat Meta Data View Controller-->
+        <scene sceneID="eit-fo-7zf">
+            <objects>
+                <viewController storyboardIdentifier="DisplayChatMetaDataVC" id="t1h-i7-coo" customClass="DisplayChatMetaDataViewController" customModule="GamerMatch" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="8fE-f8-Stv">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jlH-KM-O89">
+                                <rect key="frame" x="0.0" y="64" width="375" height="200"/>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tap Image To Change Group Picture" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZJq-It-RL0">
+                                <rect key="frame" x="0.0" y="272" width="375" height="24"/>
+                                <fontDescription key="fontDescription" name="ComicSansMS" family="Comic Sans MS" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="UVb-pA-lNu">
+                                <rect key="frame" x="0.0" y="304" width="375" height="363"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="jlH-KM-O89" firstAttribute="leading" secondItem="eVm-ao-eMT" secondAttribute="leading" id="Cq6-we-xmH"/>
+                            <constraint firstItem="jlH-KM-O89" firstAttribute="height" secondItem="8fE-f8-Stv" secondAttribute="height" multiplier="0.3" id="NE7-EG-2Cm"/>
+                            <constraint firstItem="ZJq-It-RL0" firstAttribute="trailing" secondItem="eVm-ao-eMT" secondAttribute="trailing" id="Nf1-xE-4Ot"/>
+                            <constraint firstItem="UVb-pA-lNu" firstAttribute="leading" secondItem="eVm-ao-eMT" secondAttribute="leading" id="PXq-rb-O88"/>
+                            <constraint firstItem="eVm-ao-eMT" firstAttribute="bottom" secondItem="UVb-pA-lNu" secondAttribute="bottom" id="WgI-fd-N2o"/>
+                            <constraint firstItem="jlH-KM-O89" firstAttribute="trailing" secondItem="eVm-ao-eMT" secondAttribute="trailing" id="e7J-Rd-hRC"/>
+                            <constraint firstItem="jlH-KM-O89" firstAttribute="top" secondItem="eVm-ao-eMT" secondAttribute="top" id="hcF-cX-yRQ"/>
+                            <constraint firstItem="eVm-ao-eMT" firstAttribute="bottom" secondItem="UVb-pA-lNu" secondAttribute="bottom" id="ipc-Hf-iTV"/>
+                            <constraint firstItem="UVb-pA-lNu" firstAttribute="top" secondItem="ZJq-It-RL0" secondAttribute="bottom" constant="8" id="nOq-FU-jpJ"/>
+                            <constraint firstItem="eVm-ao-eMT" firstAttribute="trailing" secondItem="UVb-pA-lNu" secondAttribute="trailing" id="vWu-yS-WHZ"/>
+                            <constraint firstItem="ZJq-It-RL0" firstAttribute="top" secondItem="jlH-KM-O89" secondAttribute="bottom" constant="8" id="wH4-pB-yhA"/>
+                            <constraint firstItem="ZJq-It-RL0" firstAttribute="leading" secondItem="eVm-ao-eMT" secondAttribute="leading" id="xKS-LE-l28"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="eVm-ao-eMT"/>
+                    </view>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <connections>
+                        <outlet property="groupImageButton" destination="jlH-KM-O89" id="Fuh-xj-aP3"/>
+                        <outlet property="tableView" destination="UVb-pA-lNu" id="TXW-wa-PMi"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="XbU-dZ-K25" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="5186.3999999999996" y="821.73913043478262"/>
+        </scene>
         <!--New Group Chat Setup View Controller-->
         <scene sceneID="hDE-ZL-IVJ">
             <objects>
